[update] change some fix
