# docs/swagger.yaml
@@ -8,14 +8,21 @@ definitions:
         maxLength: 32
         minLength: 8
         type: string
-      username:
-        maxLength: 32
-        minLength: 3
-        type: string
     required:
     - email
     - password
-    - username
+    type: object
+  request.BlockCreateRequest:
+    properties:
+      name:
+        type: string
+    type: object
+  request.BlockUpdateRequset:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
     type: object
   request.LoginInput:
     properties:
@@ -206,6 +213,13 @@ paths:
     post:
       consumes:
       - application/json
+      parameters:
+      - description: Create Block
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.BlockCreateRequest'
       produces:
       - application/json
       responses:
@@ -226,6 +240,12 @@ paths:
     delete:
       consumes:
       - application/json
+      parameters:
+      - description: Block id
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -245,6 +265,12 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: Block id
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -264,6 +290,18 @@ paths:
     put:
       consumes:
       - application/json
+      parameters:
+      - description: Update Block
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.BlockUpdateRequset'
+      - description: Block id
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -284,6 +322,23 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: Page number
+        in: query
+        name: page
+        type: integer
+      - description: Page size
+        in: query
+        name: page_size
+        type: integer
+      - description: Order by
+        in: query
+        name: order_by
+        type: string
+      - description: Order
+        in: query
+        name: order
+        type: string
       produces:
       - application/json
       responses:
