# internal/dto/auth_dto.go
@@ -11,7 +11,6 @@ type Token struct {
 }
 
 type RegisterInput struct {
-	Username string `json:"username" validate:"required,min=3,max=32"`
 	Email    string `json:"email" validate:"required,email"`
 	Password string `json:"password" validate:"required,min=8,max=32"`
 }
